# rtk_challenge

completed_scripts_jetbot/: apt_requirements.txt  package.xml  setup.py
completed_scripts_jetbot/launch/: slam.launch.py
completed_scripts_jetbot/rviz/: full.rviz
esp_firmware/: README.md  esp_firmware.ino
jetbot_mirea_description/: frames_2025-06-22_22.43.54.gv
jetbot_mirea_description/launch/: jetbot_mirea_rviz.launch.py
jetbot_mirea_description/urdf/: jetbot_mirea.urdf.xacro
serial_bridge_package/launch/: serial_bringup.launch.py
serial_bridge_package/serial_bridge_package/: feedback_processor.py  serial_bridge_node.py  twist_to_command.py
sllidar_ros2/scripts/: create_udev_rules.sh
